Fee Structure modified

--- a/academics_admissions/fee_structure.html
+++ b/academics_admissions/fee_structure.html
@@ -240,7 +240,7 @@
                         → Students Belonging to Scheduled Caste with total annual income not exceeding Rs. 2,50,000 after producing latest income certificate duly approved from the competent authority has to submit only Rs 1133 at the time of admission. 
                     </p>
                     <p style="text-align: justify;">
-                        → Full tuition fee waiver is given to 5% students in each branch, subjected to condition that annual income of his family is less than Rs. 8,00,000/-. The student has to deposit only Rs. 7150/- at the time of admission.
+                        → Full tuition fee waiver is given to 5% students in each branch, subjected to condition that annual income of his family is less than Rs. 8,00,000/-. The student has to deposit only Rs. 7150/- at the time of admission after producing latest income certificate duly approved from the competent authority.
                     </p>
 
                         
