--- a/sub_header/disclosure.html
+++ b/sub_header/disclosure.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
-        <meta name="author" content="Template Mo">
+        <meta name="author" content="GPC Bathinda">
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
         <title>GPC Bathinda</title>
@@ -69,7 +69,7 @@
             <div class="col-lg-3 col-sm-3">
             <div class="right-icons">
                 <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="http://facebook.com/gpc.bathinda.50" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="mailto:gpcbathinda@punjab.gov.in"><i class="fa fa-envelope"></i></a></li>
                 </ul>
             </div>
@@ -486,7 +486,7 @@
                                 <tr>
                                 <th scope="row"></th>
                                 <td>Name of programmes,duration and no. of seats </td>
-                                <td><a href="admission_eligibility.html">Click Here</a> </td>
+                                <td><a href="../academics_admissions/programmes.html" target="_blank">Click Here</a> </td>
                                 </tr>
                                 <tr>
                                 <th scope="row"></th>
@@ -506,7 +506,7 @@
                                 <tr>
                                 <th scope="row"></th>
                                 <td>Camus Placement in last 3 years </td>
-                                <td><a href="placement.html">Click Here</a> </td>
+                                <td><a href="placements.html" target="_blank">Click Here</a> </td>
                                 </tr>
                                 <tr>
                                 <th scope="row"></th>
@@ -571,7 +571,7 @@
                                 <tr>
                                 <th scope="row">10.12</th>
                                 <td>No. of seats sanctioned with year of approval </td>
-                                <td><a href="admission-eligibility.html">Click Here</a></td>
+                                <td><a href="../academics_admissions/programmes.html" target="_blank">Click Here</a></td>
                                 </tr>
                                 <tr>
                                 <th scope="row"></th>
@@ -781,7 +781,7 @@
                                 <tr>
                                 <th scope="row"></th>
                                 <td>Academic Calender </td>
-                                <td><a href="assets/files/academic_calender.pdf">Click Here</a></td>
+                                <td><a href="../assets/files/Academic-Cal_June22.PDF" target="_blank">Click Here</a></td>
                                 </tr>
                                 <tr>
                                 <th scope="row"></th>
@@ -886,7 +886,7 @@
                                 <tr>
                                 <th scope="row">10.21</th>
                                 <td>AICTE Extension of approval </td>
-                                <td><a href="EOA.pdf">EOA 2021-22</a></td>
+                                <td><a href="../assets/files/eoa2022.pdf" target="_blank">EOA 2022-23</a></td>
                                 </tr>
                                 <tr>
                                 <th scope="row">10.22</th>
