--- a/departments/ce/home.html
+++ b/departments/ce/home.html
@@ -245,7 +245,7 @@
                            <div class="dept-card">
                             <div class="dept-card">
                               <div class="blur-it">
-                                <h4><a href="#" style="color:white;">Placement Record</a></h4>
+                                <h4><a href="placement.html" style="color:white;">Placement Record</a></h4>
                               </div>
                             </div>
                            </div>
