mission and vision

--- a/aboutus/principal_message copy.html
+++ b/aboutus/principal_message copy.html
@@ -201,29 +201,25 @@
                   </div> -->
                 </div>
                 <div class="down-content">
-                  <h4>Vision and Mission </h4>
+                  <h4>Principal's Message</h4>
                  <div class="org-body">
-                    <div>
-                        <h5 style="color: #6f0000">Vision and Values</h5>
-                  <p style="text-align: justify;">
-                    The main objective of the college is to provide Technical Education at  Diploma level,thus preparing technicians of a level comparable to the  best in the country keeping in view the need of the industry. Students  apart from being prepared for industrial jobs are also trained for  self-employment. They are made self sufficient and enterprising so as  to be able to understand profitable ventures. Above all a sense of  discipline is inculcated in the students making them useful &amp;  responsible citizens.   Extra curricular activities are given a special emphasis in the  institution for an all round development of the students. The students  are encouraged to participate in sports and other competitions.
-                    <br>
-                    The institution has established an Industry Institute Interaction Cell under the World Bank assisted projects to facilitate interaction and co-ordination with industries so as to make technical education relevant to current needs.
-                  </p>
-                  <h5 style="margin-top:20px;color: #6f0000">Mission</h5>
-                  <p style="text-align: justify;">
-                    → To impart affordable and quality education in order to meet the needs of industries and achieve excellence in teaching-learning process. <br><br>
+                  <p class="content-org">
+                    <br/>
+                    Imparting education is not just about teaching what is written in the books but is about the wholistic development of students that inculcates the moral, social values along with skills in curricular and extra-curricular fields. At Government Polytechnic Bathinda, we as team always ensure to focus our efforts on developing the overall personality of the students which help the students to shine in every field they wish to go for. Our students are the proud achievers of not only the academic positions but the topmost ones in sports also at the Inter-College Level. 
+                    <br/><br/>
 
-                    → To collaborate with other academic institutes as well as industries in order to strengthen education and multidisciplinary projects. <br><br>
+                    Government Polytechnic College, Bathinda was established in the year 1985 to impart practical and quality education along with sufficient job opportunities in the field of Engineering and Technology. The Institute has been awarded with the Outstanding Institution Award (2019-20) and (2013-14) and the Best Polytechnic Award (2008-09) by the Government of Punjab. 
+                    <br/><br/>
+                    The perseverance and dedication of the entire staff is so high that it is effervescent to evolve problem- solving strategies for the betterment of the students.
+                    Our committed, caring, dedicated and supportive faculty and co-operative parents blend harmoniously to create a child centered college.  It is natural to find in this ambience, intensive use of a variety of thinking activities, strategies and group dynamics so that the classrooms become alive. Teamwork is hallmark of GPC Bathinda. I am very sure through collaborative effort, we can achieve more to benefit our students, who are the future leaders of tomorrow.
+                    <br/><br/> In the last the only thing can I say and totally agree to the following quote by B.B. King.
 
-                    → To promote equitable and harmonious growth of students, academicians, staff, society and industries, thereby becoming a center of excellence in technical education. <br><br>
-
-                    → To practise and encourage high standards of professional ethics, transparency and accountability. <br><br>
+                    <span id="motivation">"Education is the Most Powerful weapon you can use to change the world."</span>
 
                   </p>
-                    </div>
-                  <div>
-                    <img style="width:400px;" src="../assets/images/vision_mission.png" alt="" srcset="">
+                  <div class="principal-mesg">
+                    <img src="../assets/images/principal.jpeg" alt="" srcset="">
+                    <figcaption>Ar. Anuja Pupneja<br/>Principal, GPC Bathinda</figcaption>
                   </div>
                   
                  </div>
