--- a/aboutus/campus.html
+++ b/aboutus/campus.html
@@ -213,7 +213,7 @@
                   </p>
                     </div>
                   <div>
-                    <img style="width:400px;" src="../assets/images/vision_mission.png" alt="" srcset="">
+                    <img style="width:300px;" src="../assets/images/collage.jpg" alt="" srcset="">
                   </div>
                   
                  </div>
