ME placement updated

--- a/departments/me/placement.html
+++ b/departments/me/placement.html
@@ -219,97 +219,170 @@
                             </thead>
                             <tbody>
                                  <tr>
-        <td>1</td>
-        <td>2021-2022</td>
-        <td>AMANDEEP SINGH</td>
-        <td>602/19</td>
-        <td></td>
-        <td>AVC MOTORS BATHINDA</td>
-        <td>1.08</td>
-    </tr>
+                                  <tr>
+                                    <td>1</td>
+                                    <td>2021-22</td>
+                                    <td>AMANDEEP SINGH</td>
+                                    <td>190195302125</td>
+                                    <td>7889036018</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>2021-22</td>
+                                    <td>RITOSH KUMAR</td>
+                                    <td>190195302168</td>
+                                    <td>9779797695</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>2021-22</td>
+                                    <td>ROBIN SINGH</td>
+                                    <td>190195302169</td>
+                                    <td>6239017302</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>2021-22</td>
+                                    <td>HARJOT KUMAR SHARMA</td>
+                                    <td>190195302146</td>
+                                    <td>9463951588</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>2021-22</td>
+                                    <td>LOVEJEET SINGH</td>
+                                    <td>190195302155</td>
+                                    <td>9878749199</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>2021-22</td>
+                                    <td>PRATHAM GUPTA</td>
+                                    <td>190195302165</td>
+                                    <td>8557032988</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>7</td>
+                                    <td>2021-22</td>
+                                    <td>SHIVAM</td>
+                                    <td>190195302175</td>
+                                    <td>9729050300</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>8</td>
+                                    <td>2021-22</td>
+                                    <td>JASHANPREET</td>
+                                    <td>190195302149</td>
+                                    <td>9988523609</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>9</td>
+                                    <td>2021-22</td>
+                                    <td>SAURAVDEEP SINGH</td>
+                                    <td>190195380401</td>
+                                    <td>7508071179</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>10</td>
+                                    <td>2021-22</td>
+                                    <td>AMANDEEP SINGH</td>
+                                    <td>190195302125</td>
+                                    <td>9530617037</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>11</td>
+                                    <td>2021-22</td>
+                                    <td>AMANDEEP KUMAR</td>
+                                    <td>190195302124</td>
+                                    <td>6284096926</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>12</td>
+                                    <td>2021-22</td>
+                                    <td>SHUBHAM KUMAR</td>
+                                    <td>190195380402</td>
+                                    <td>9877788762</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>13</td>
+                                    <td>2021-22</td>
+                                    <td>HAPPY SINGH</td>
+                                    <td>190195302143</td>
+                                    <td>8699017727</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>14</td>
+                                    <td>2021-22</td>
+                                    <td>SAGAR</td>
+                                    <td>190195302170</td>
+                                    <td>6280975062</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>15</td>
+                                    <td>2021-22</td>
+                                    <td>SAJAN NANDA</td>
+                                    <td>190195302171</td>
+                                    <td>7717655656</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>16</td>
+                                    <td>2021-22</td>
+                                    <td>JAGJEET SINGH</td>
+                                    <td>190195380399</td>
+                                    <td>9501705411</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>17</td>
+                                    <td>2021-22</td>
+                                    <td>ADITYA</td>
+                                    <td>190195302121</td>
+                                    <td>8557828504</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
+                                <tr>
+                                    <td>18</td>
+                                    <td>2021-22</td>
+                                    <td>VIJAYPARTAP SINGH</td>
+                                    <td>190195302181</td>
+                                    <td>8872797095</td>
+                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
+                                    <td>1.71</td>
+                                </tr>
     <tr>
-        <td>2</td>
-        <td>2021-2022</td>
-        <td>ANMOL SINGH</td>
-        <td>604/19</td>
-        <td></td>
-        <td>RAJA MOTORS HYUNDAI BATHINDA</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>2021-2022</td>
-        <td>CHANDAN BANSAL</td>
-        <td>605/19</td>
-        <td></td>
-        <td>RAJA MOTORS HYUNDAI BATHINDA</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>2021-2022</td>
-        <td>HAPPY SINGH</td>
-        <td>609/19</td>
-        <td></td>
-        <td>RAJA MOTORS HYUNDAI BATHINDA</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>2021-2022</td>
-        <td>AMANDEEP KUMAR</td>
-        <td>631/19</td>
-        <td></td>
-        <td>AVC MOTORS BATHINDA</td>
-        <td>1.08</td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td>2021-2022</td>
-        <td>RITOSH KUMAR</td>
-        <td>654/19</td>
-        <td></td>
-        <td>AVC MOTORS BATHINDA</td>
-        <td>1.08</td>
-    </tr>
-    <tr>
-        <td>7</td>
-        <td>2021-2022</td>
-        <td>SAJAN NANDA</td>
-        <td>656/19</td>
-        <td></td>
-        <td>AVC MOTORS BATHINDA</td>
-        <td>1.08</td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td>2021-2022</td>
-        <td>AKASHDEEP SINGH</td>
-        <td>664/19</td>
-        <td></td>
-        <td>RAJA MOTORS HYUNDAI BATHINDA</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td>2021-2022</td>
-        <td>JAGJEET SINGH</td>
-        <td>666/19</td>
-        <td></td>
-        <td>AVC MOTORS BATHINDA</td>
-        <td>1.08</td>
-    </tr>
-    <tr>
-        <td>10</td>
-        <td>2021-2022</td>
-        <td>SHUBHAM KUMAR</td>
-        <td>669/19</td>
-        <td></td>
-        <td>RAJA MOTORS HYUNDAI BATHINDA</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>11</td>
+        <td>19</td>
         <td>2020-2021</td>
         <td>ABHISHEK KUMAR</td>
         <td>180195302364</td>
@@ -318,7 +391,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>12</td>
+        <td>20</td>
         <td>2020-2021</td>
         <td>JASWINDER SINGH</td>
         <td>180195302386</td>
@@ -327,7 +400,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>13</td>
+        <td>21</td>
         <td>2020-2021</td>
         <td>KARMVEER KUMAR</td>
         <td>180195302388</td>
@@ -336,7 +409,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>14</td>
+        <td>22</td>
         <td>2020-2021</td>
         <td>NIRMAL KUMAR</td>
         <td>180195302397</td>
@@ -345,7 +418,7 @@
         <td>1.44</td>
     </tr>
     <tr>
-        <td>15</td>
+        <td>23</td>
         <td>2020-2021</td>
         <td>SHANNU</td>
         <td>180195302404</td>
@@ -354,7 +427,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>16</td>
+        <td>24</td>
         <td>2020-2021</td>
         <td>AJEET PATEL</td>
         <td>180195302365</td>
@@ -363,7 +436,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>17</td>
+        <td>25</td>
         <td>2020-2021</td>
         <td>MANINDER SHARMA</td>
         <td>180195302394</td>
@@ -372,7 +445,7 @@
         <td>1.5</td>
     </tr>
     <tr>
-        <td>18</td>
+        <td>26</td>
         <td>2020-2021</td>
         <td>ABHISHEK</td>
         <td>180195302363</td>
@@ -381,7 +454,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>19</td>
+        <td>27</td>
         <td>2020-2021</td>
         <td>GULSHAN SINGH</td>
         <td>180195380815</td>
@@ -390,7 +463,7 @@
         <td>1.4</td>
     </tr>
     <tr>
-        <td>20</td>
+        <td>28</td>
         <td>2020-2021</td>
         <td>JANKSHAN SINGH</td>
         <td>180195380818</td>
@@ -399,7 +472,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>21</td>
+        <td>29</td>
         <td>2020-2021</td>
         <td>LUCKY</td>
         <td>180195380821</td>
@@ -408,7 +481,7 @@
         <td>1.5</td>
     </tr>
     <tr>
-        <td>22</td>
+        <td>30</td>
         <td>2020-2021</td>
         <td>RAHUL KUMAR CHAURASIA</td>
         <td>180195380823</td>
@@ -417,7 +490,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>23</td>
+        <td>31</td>
         <td>2020-2021</td>
         <td>VIKASH KUMAR SHAH</td>
         <td>180195380828</td>
@@ -426,7 +499,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>24</td>
+        <td>32</td>
         <td>2020-2021</td>
         <td>MAJOR SINGH</td>
         <td>180195380822</td>
@@ -435,7 +508,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>25</td>
+        <td>33</td>
         <td>2020-2021</td>
         <td>BALRAJ SINGH</td>
         <td>180195380813</td>
@@ -444,7 +517,7 @@
         <td>1.92</td>
     </tr>
     <tr>
-        <td>26</td>
+        <td>34</td>
         <td>2019-2020</td>
         <td>GAGANPREET SINGH</td>
         <td>160195302877</td>
@@ -453,7 +526,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>27</td>
+        <td>35</td>
         <td>2019-2020</td>
         <td>AKASH KUMAR</td>
         <td>170195303081</td>
@@ -462,7 +535,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>28</td>
+        <td>36</td>
         <td>2019-2020</td>
         <td>GAGANDEEP SINGH</td>
         <td>170195303092</td>
@@ -471,7 +544,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>29</td>
+        <td>37</td>
         <td>2019-2020</td>
         <td>ANIKET WATTS</td>
         <td>150195303337</td>
@@ -480,7 +553,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>30</td>
+        <td>38</td>
         <td>2019-2020</td>
         <td>GURPREET SINGH</td>
         <td>170195303098</td>
@@ -489,7 +562,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>31</td>
+        <td>39</td>
         <td>2019-2020</td>
         <td>JAGSEER SINGH</td>
         <td>170195303106</td>
@@ -498,7 +571,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>32</td>
+        <td>40</td>
         <td>2019-2020</td>
         <td>JASPREET SINGH</td>
         <td>170195303108</td>
@@ -507,7 +580,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>33</td>
+        <td>41</td>
         <td>2019-2020</td>
         <td>KHUSHPREET SINGH</td>
         <td>170195303111</td>
@@ -516,7 +589,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>34</td>
+        <td>42</td>
         <td>2019-2020</td>
         <td>MILANDEEP SINGH</td>
         <td>170195303116</td>
@@ -525,7 +598,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>35</td>
+        <td>43</td>
         <td>2019-2020</td>
         <td>SANDEEP DHUNDHARA</td>
         <td>170195303126</td>
@@ -534,7 +607,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>36</td>
+        <td>44</td>
         <td>2019-2020</td>
         <td>SANJIT SINGH</td>
         <td>170195303128</td>
@@ -543,7 +616,7 @@
         <td>2</td>
     </tr>
     <tr>
-        <td>37</td>
+        <td>45</td>
         <td>2019-2020</td>
         <td>RAJESH KUMAR</td>
         <td>170195303122</td>
@@ -552,7 +625,7 @@
         <td>1.71</td>
     </tr>
     <tr>
-        <td>38</td>
+        <td>46</td>
         <td>2019-2020</td>
         <td>UMANG RAI</td>
         <td>170195370931</td>
@@ -561,7 +634,7 @@
         <td>1.92</td>
     </tr>
     <tr>
-        <td>39</td>
+        <td>47</td>
         <td>2019-2020</td>
         <td>MANPREET SINGH</td>
         <td>170195370925</td>
@@ -570,7 +643,7 @@
         <td>1.44</td>
     </tr>
     <tr>
-        <td>40</td>
+        <td>48</td>
         <td>2019-2020</td>
         <td>JAGWINDER SINGH</td>
         <td>160195302883</td>
@@ -579,7 +652,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>41</td>
+        <td>49</td>
         <td>2019-2020</td>
         <td>EKPREET SINGH</td>
         <td>150195303341</td>
@@ -588,7 +661,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>42</td>
+        <td>50</td>
         <td>2019-2020</td>
         <td>HARSHPREET SINGH</td>
         <td>170195303103</td>
