--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.com/" target="_blank">
+                          Admissions 2022-23
+                        </a>
+                      </li>
+                      <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/rent_contract_22_23.pdf" target="_blank">
                           Rent Contract of Canteen and Tuck Shop on Contractual Basis for 2022-23
                         </a>
@@ -377,42 +382,44 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="title-heading" style="font-weight: bold;">
                     Help Desk
                   </div>
-                  <div class="down-content" style="height:470px;">
-                    <table style="margin: 0px;">
-                      <tr>
-                        <td>
-                          <span style="font-size:40px;">☞</span>
-                        </td>
-                        <td>
-                          <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">Grievance Redressal</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <span style="font-size:40px;">☞</span>
-                        </td>
-                        <td>
-                          <a href="help_desk/icc.html" style="font-size:18px;">Internal Complaint Committee</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <span style="font-size:40px;">☞</span>
-                        </td>
-                        <td>
-                          <a href="help_desk/scstcommittee.html" style="font-size:18px;">SC/ ST Committee</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <span style="font-size:40px;">☞</span>
-                        </td>
-                        <td>
-                          <a href="help_desk/student_counsellor.html" style="font-size:18px;">Student Counsellor</a>
-                        </td>
-                      </tr>
-                      
-                    </table>
+                  <div class="down-content">
+                    <div>
+                      <p style="margin: auto;
+                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
+                        <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">Grievance Redressal</a>
+                      </p>
+                      <p style="margin: auto;padding-top: 15px; 
+                      padding-bottom:15px; border-bottom:1px solid gray">
+                        <a href="help_desk/icc.html" style="font-size:18px;">Internal Complaint Committee</a>
+                      </p>
+                      <p style="margin: auto;padding-top: 15px; 
+                      padding-bottom:15px; border-bottom:1px solid gray">
+                        <a href="help_desk/scstcommittee.html" style="font-size:18px;">SC/ ST Committee</a>
+                      </p>
+                      <p style="margin: auto;padding-top: 15px; 
+                      padding-bottom:10px;">
+                        <a href="help_desk/student_counsellor.html" style="font-size:18px;">Student Counsellor</a>
+                      </p>
+                    </div>
+                    <div>
+                      <p style="margin: auto;
+                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
+                        <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">Grievance Redressal</a>
+                      </p>
+                      <p style="margin: auto;padding-top: 15px; 
+                      padding-bottom:15px; border-bottom:1px solid gray">
+                        <a href="help_desk/icc.html" style="font-size:18px;">Internal Complaint Committee</a>
+                      </p>
+                      <p style="margin: auto;padding-top: 15px; 
+                      padding-bottom:15px; border-bottom:1px solid gray">
+                        <a href="help_desk/scstcommittee.html" style="font-size:18px;">SC/ ST Committee</a>
+                      </p>
+                      <p style="margin: auto;padding-top: 15px; 
+                      padding-bottom:10px;">
+                        <a href="help_desk/student_counsellor.html" style="font-size:18px;">Student Counsellor</a>
+                      </p>
+                    </div>
+
                   </div>
                 </div>
               </div>
