PIE placement updated

--- a/departments/pie/placement.html
+++ b/departments/pie/placement.html
@@ -310,7 +310,25 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>11</td>
+      <td>11</td>
+      <td>2021-22</td>
+      <td>SURAJ</td>
+      <td>190195580416</td>
+      <td>7009533782</td>
+      <td>KOYO BEARINGS</td>
+      <td>2</td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>2021-22</td>
+    <td>JEEWAN SINGH</td>
+    <td>190195580412</td>
+    <td>9056737130</td>
+    <td>KOYO BEARINGS</td>
+    <td>2</td>
+</tr>
+    <tr>
+        <td>13</td>
         <td>2020-21</td>
         <td>MAHEER GOGIA</td>
         <td>180195502417</td>
@@ -319,7 +337,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>12</td>
+        <td>14</td>
         <td>2020-21</td>
         <td>SAURAV GARG</td>
         <td>180195502411</td>
@@ -328,7 +346,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>13</td>
+        <td>15</td>
         <td>2019-20</td>
         <td>ARUN KUMAR</td>
         <td>170195503147</td>
@@ -337,7 +355,7 @@
         <td>1.8</td>
     </tr>
     <tr>
-        <td>14</td>
+        <td>16</td>
         <td>2019-20</td>
         <td>JAGTAR SINGH</td>
         <td>170195503151</td>
@@ -346,7 +364,7 @@
         <td>1.14</td>
     </tr>
     <tr>
-        <td>15</td>
+        <td>17</td>
         <td>2019-20</td>
         <td>JASVEER SINGH</td>
         <td>170195503153</td>
@@ -355,7 +373,7 @@
         <td>1.14</td>
     </tr>
     <tr>
-        <td>16</td>
+        <td>18</td>
         <td>2019-20</td>
         <td>NACHHTAR SINGH</td>
         <td>170195570933</td>
@@ -364,7 +382,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>17</td>
+        <td>19</td>
         <td>2019-20</td>
         <td>KHUSHPREET SINGH</td>
         <td>170195503155</td>
@@ -410,28 +428,35 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>4</td>
+      <td>4</td>
+      <td>Koyo Bearing</td>
+      <td>2021-22</td>
+      <td>2</td>
+      <td>2</td>
+  </tr>
+    <tr>
+        <td>5</td>
         <td>Capital Traders</td>
         <td>2020-21</td>
         <td>2</td>
         <td>1.2</td>
     </tr>
     <tr>
-        <td>5</td>
+        <td>6</td>
         <td>Koyo Bearing</td>
         <td>2019-20</td>
         <td>1</td>
         <td>1.8</td>
     </tr>
     <tr>
-        <td>6</td>
+        <td>7</td>
         <td>Capital Trader</td>
         <td>2019-20</td>
         <td>2</td>
         <td>1.14</td>
     </tr>
     <tr>
-        <td>7</td>
+        <td>8</td>
         <td>Sapphire Engg. Industry</td>
         <td>2019-20</td>
         <td>2</td>
