AA placement updated

--- a/departments/aa/placement.html
+++ b/departments/aa/placement.html
@@ -513,42 +513,49 @@
                                     <td>0.84</td>
                                 </tr>
                                 <tr>
-                                    <td>12</td>
+                                  <td>12</td>
+                                  <td>SANJEEV ARCHITOS, BATHINDA</td>
+                                  <td>2020-21</td>
+                                  <td>1</td>
+                                  <td>0.5</td>
+                              </tr>
+                                <tr>
+                                    <td>13</td>
                                     <td>DESIGN INNOVATIONS, BATHINDA</td>
                                     <td>2019-20</td>
                                     <td>1</td>
                                     <td>0.6</td>
                                 </tr>
                                 <tr>
-                                    <td>13</td>
+                                    <td>14</td>
                                     <td>VIKAS BANSAL ASSOCIATES, BATHINDA</td>
                                     <td>2019-20</td>
                                     <td>2</td>
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>14</td>
+                                    <td>15</td>
                                     <td>CONSORTIUM DESIGN CORE, BATHINDA</td>
                                     <td>2019-20</td>
                                     <td>1</td>
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>15</td>
+                                    <td>16</td>
                                     <td>BUILD WELL GROUP, BATHINDA</td>
                                     <td>2019-20</td>
                                     <td>1</td>
                                     <td>0.72</td>
                                 </tr>
                                 <tr>
-                                    <td>16</td>
+                                    <td>17</td>
                                     <td>GARG IDEA'S HUB, SANGRUR</td>
                                     <td>2019-20</td>
                                     <td>1</td>
                                     <td>0.66</td>
                                 </tr>
                                 <tr>
-                                    <td>17</td>
+                                    <td>18</td>
                                     <td>BASERA ARCHITECTS, BATHINDA</td>
                                     <td>2019-20</td>
                                     <td>3</td>
